[project]
name = "py10x-core"
version = "0.1.2"
description = "10X Universe Core Internals"
requires-python = ">=3.10"
license = {text = "Proprietary - See LICENSE file for details."}
readme = "README.md"
requires-python = ">=3.11,<3.12"

authors = [
    { name = "10X CONCEPTS LLC", email = "founders@10x-software.org" }
]
classifiers = [
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
]
maintainers = [
    { name = "Sasha Davidovich", email = "founders@10x-software.org" },
    { name = "Ilya Pevzner", email = "founders@10x-software.org" }
]

[project.urls]
Homepage = "https://10x-software.org"

[build-system]
requires = [
    "scikit-build-core>=0.10.7",
]
build-backend = "scikit_build_core.build"

