[project]
name = "py10x-core"
version = "0.1.5"
description = "10X Universe Core Internals"
license = {text = "Proprietary - See LICENSE file for details."}
readme = "README.md"
requires-python = ">=3.11,<3.13"

authors = [
    { name = "Alexander Davidovich" },
    { name = "Ilya Pevzner" }
]

classifiers = [
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]

maintainers = [
    { name = "Alexander Davidovich & Ilya Pevzner", email = "py10x@10x-software.org" },
]

[project.urls]
Homepage = "https://10x-software.org"

[build-system]
requires = [
    "scikit-build-core>=0.10.7",
]
build-backend = "scikit_build_core.build"

