[project]
name = "py10x-core"
description = "10X Universe Core Internals"
license = {text = "Proprietary - See LICENSE file for details."}
readme = "README.md"
requires-python = ">=3.11,<3.13"
dynamic = ["version"]

authors = [
    { name = "10X CONCEPTS LLC", email = "py10x@10x-software.org" },
]

classifiers = [
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Development Status :: 4 - Beta",
]

[project.urls]
Homepage = "https://10x-software.org"

[build-system]
requires = [
    "scikit-build-core>=0.10.7",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"

[tool.setuptools_scm]
root = ".."
git_describe_command = "git describe --dirty --tags --long --match 'py10x-core-*' --abbrev=40"
