[project]
name = "infra_10x_i"
version = "0.1.1"
authors = [
    { name = "Sasha Davidovich", email = "sasha.davidovich@10xconcepts.com" },
    { name = "Ilya Pevzner", email = "ilya.pevzner@10xconcepts.com" }
]
description = "10X Universe Infrastructure Internals"
requires-python='>=3.10'

[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = ["scikit-build-core>=0.10.7", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
sdist.cmake = true

[tool.cibuildwheel]
test-command = "python {project}/tests/test.py"

[tool.ruff]
target-version = "py37"

[tool.ruff.lint]
extend-select = [
  "B",   # flake8-bugbear
  "I",   # isort
  "PGH", # pygrep-hooks
  "RUF", # Ruff-specific
  "UP",  # pyupgrade
]
