[project]
name = "py10x-infra"
version = "0.1.3"
description = "10X Universe Infrastructure Internals"
license = {text = "Proprietary - See LICENSE file for details."}
readme = "README.md"
requires-python = ">=3.11,<3.13"

authors = [
    { name = "10X CONCEPTS LLC", email = "founders@10x-software.org" }
]
classifiers = [
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
]
maintainers = [
    { name = "Sasha Davidovich & Ilya Pevzner", email = "py10x@10x-software.org" },
]

[project.urls]
Homepage = "https://10x-software.org"

[build-system]
requires = [
    "scikit-build-core>=0.10.7",
]
build-backend = "scikit_build_core.build"
