[project]
name = "cross-module-test"
description = "Minimal test extension that exercises cross-module pybind11 types from py10x-kernel"
requires-python = ">=3.11,<3.13"
dynamic = ["version"]
dependencies = [
    "py10x-core[dev]",
    "py10x-kernel",
    "py10x-infra",
]

[build-system]
requires = [
    "scikit-build-core>=0.10.7",
    "setuptools-scm>=9.2.2",
    "py10x-kernel"
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
editable.rebuild = true
build-dir = "build/{wheel_tag}"

[tool.setuptools_scm]
root = "../.."  # relative to this package, points at cxx10x root for versioning if needed
git_describe_command = "git describe --dirty --tags --long --match 'cross-module-test-v*' --abbrev=8"

[tool.uv.sources]
py10x-kernel = {path="../../core_10x", editable=true}
py10x-infra = {path="../../infra_10x", editable=true}
py10x-core = {path="../../../py10x", editable=true}

[tool.uv]
no-build-isolation = true
